syntax = "proto3";
package datagrinder;

service Grinder {
    // Returns a grind result
    rpc Grind (datagrinder.GrinderInput) returns (datagrinder.GrinderOutput) {}
}

message GrinderInput {
    int32 Setting = 1;
    int32 Height = 2;
    int32 Width = 3;
}

message GrinderOutput {
    string Base64image = 1;
}